testsuite/tests/lexical_envs/invalid_entity_resolver/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- ASTList[Decl]+(decl)
    decl <- Decl(Name(@identifier) "(" ASTList[Ref]*(ref) ")")
    ref <- Ref(Name(@identifier))
}
